Correcting layout issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -283,7 +283,7 @@ button.offers-shop-now.btn.rounded-0:hover {
 
 
 .error-content {
-    margin-top: 45%;
+    padding-top: 45%;
 }
 
 /* ------------------------------------- Allauth Profile */
